--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -15,6 +18,23 @@
     <!-- -->
 
     <h1> DATE PICKER</h1>
+
+    <div class="date-picker">
+        <div class="selected-date"></div>
+
+        <div class="date">
+            <div class="month">
+                <div class="arrows prev-mth"> &lt; </div>
+                <div class="mth"> </div>
+                <div class="arrows next-mth">&gt;</div>
+            </div>
+
+            <div class="days">
+            </div>
+
+        </div>
+    </div>
+
 
     <script src="index.js" async defer></script>
 </body>
